--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
-
+    <!--Icon google-->
 
 </head>
 <body onload="time()" class="app sidebar-mini rtl">
@@ -84,11 +84,15 @@
                 </a>
             </li>
             <li>
+                <a class="app-menu__item @ViewBag.sp" href="~/KinhDoanh/QuanLySP">
+                    <i class='app-menu__icon bx bx'></i><span class="app-menu__label">Tiếp nhận hàng hóa</span>
+                </a>
+            </li>
+            <li>
                 <a class="app-menu__item  @ViewBag.baocao" href="~/KinhDoanh/BaoCao">
                     <i class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo</span>
                 </a>
             </li>
-
         </ul>
     </aside>
     <main class="app-content">
