--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -84,8 +84,8 @@
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.sp" href="~/KinhDoanh/QuanLySP">
-                    <i class='app-menu__icon bx bx'></i><span class="app-menu__label">Tiếp nhận hàng hóa</span>
+                <a class="app-menu__item @ViewBag.TN" href="~/KinhDoanh/TiepNhanHH">
+                    <i class='app-menu__icon bx bx-paper-plane @ViewBag.hieuung'></i> <span class="app-menu__label">Phiếu đề nghị</span>
                 </a>
             </li>
             <li>
