--- a/Test02/Views/PhongKho/ChiTietPhieuXuatKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietPhieuXuatKho.cshtml
@@ -28,7 +28,7 @@
     <div class="col-md-12">
         <div class="tile " id="printMe">
             <p>Tên đơn vị: Công ty TNHH nước giải khát NQK</p>
-            <p>Mã số thuế: 03289456217</p>
+            <p></p>
             <h2 style="text-align:center" id="sample1">PHIẾU ĐỀ NGHỊ XUẤT KHO</h2>
             <form style="text-align:center">
                 <label for="date">Ngày:</label>
@@ -42,7 +42,7 @@
                         <label class="control-label">- Kính gửi: </label>
                         @Session["kinhgui"]
                     </div>
-                    <div class="form-group col-md-12" id="sample4">
+                    @*<div class="form-group col-md-12" id="sample4">
                         <label class="control-label">- Xuất tại các kho: </label> <br />
                         @for (int i = 0; i < dsCTKho.Count; i++)
                         {
@@ -63,7 +63,7 @@
                                 }
                             }
                         }
-                    </div>
+                    </div>*@
                     <div class="form-group col-md-12" id="sample5">
                         <label class="control-label">- Họ tên người làm phiếu:</label>
                         @Session["hoten"]
@@ -156,9 +156,20 @@
         <i class="fas fa-retweet"></i>
         Trở lại
     </a>
-    <a class="btn btn-delete btn-sm print-file" id="btnPrint" type="button" href="/PhongKho/NhapKho" title="In" onclick="printDiv('printMe')">
-        <i class="fas fa-print"></i> In phiếu
-    </a>
+    @{
+        if (Model.TinhTrang == "Đã xét duyệt")
+        {
+            <form method="post" action="@Url.Action("UpdateStatusPhieu", "PhongKho", new { id = Model.MaPhieu })">
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-danger">Done</button>
+            </form> }
+        else
+        {
+            <a class="btn btn-delete btn-sm print-file" id="btnPrint" href="/PhongKho/NhapKho" title="In" onclick="printDiv('printMe')">
+                <i class="fas fa-print"></i> In phiếu
+            </a>
+        }
+    }
 </p>
 <script>
     //In dữ liệu
