--- a/Test02/Views/PhongKho/BaoCao.cshtml
+++ b/Test02/Views/PhongKho/BaoCao.cshtml
@@ -5,9 +5,11 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.bc = "active";
     ViewBag.Name = "Báo cáo kho hàng";
+    ViewBag.hieuung6 = "bx-tada";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     var dsnv = db.NhanViens.ToList();
     var dscv = db.ChucVus.ToList();
+
 }
 @{
     var checkMessage = TempData["AlertMessage"];
