--- a/Test02/Views/PhongKho/ChiTietDonHang.cshtml
+++ b/Test02/Views/PhongKho/ChiTietDonHang.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.dhxdd = "active";
     ViewBag.Name = "Danh sách chi tiết đơn hàng";
+    ViewBag.hieuung4 = "bx-tada";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 @{
