--- a/Test02/Views/PhongKho/DeleteCTKho.cshtml
+++ b/Test02/Views/PhongKho/DeleteCTKho.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Xóa chi tiết kho";
     ViewBag.qlk = "active";
+    ViewBag.hieuung2 = "bx-tada";
 }
 
     <div class="row">
