--- a/Test02/Views/PhongKho/DeletePNX.cshtml
+++ b/Test02/Views/PhongKho/DeletePNX.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "DeletePNX";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
+    ViewBag.hieuung4 = "bx-tada";
 }
 
 <h3>Bạn có muốn xóa vĩnh viễn phiếu @Model.MaPhieu?</h3>
