--- a/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
+++ b/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
@@ -57,37 +57,37 @@
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.tq" href="~/PhongKho/Test02">
-                    <i class='app-menu__icon bx bx-tachometer'></i>
+                    <i class='app-menu__icon bx bx-tachometer @ViewBag.hieuung1'></i>
                     <span class="app-menu__label">Tổng quan</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.qlk" href="~/PhongKho/QuanLyKho">
-                    <i class='app-menu__icon bx bx-run'></i><span class="app-menu__label">
+                    <i class='app-menu__icon bx bx-run @ViewBag.hieuung2'></i><span class="app-menu__label">
                         Quản lý Kho
                     </span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.hh" href="~/PhongKho/QuanLyDL">
-                    <i class='app-menu__icon bx bx-user-voice'></i><span class="app-menu__label">Quản lý hàng hóa</span>
+                    <i class='app-menu__icon bx bx-user-voice @ViewBag.hieuung3 '></i><span class="app-menu__label">Quản lý hàng hóa</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.dhxdd" href="~/PhongKho/DSDonHang">
-                    <i class='app-menu__icon bx bxs-package'></i><span class="app-menu__label">
+                    <i class='app-menu__icon bx bxs-package @ViewBag.hieuung4'></i><span class="app-menu__label">
                         Đơn hàng xuất
                     </span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.nk" href="~/PhongKho/NhapKho">
-                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Phiếu nhập & xuất</span>
+                    <i class='app-menu__icon bx bx-purchase-tag-alt @ViewBag.hieuung5'></i><span class="app-menu__label">Phiếu nhập & xuất</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.bc" href="~/PhongKho/BaoCao">
-                    <i class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Kiểm kê / báo cáo</span>
+                    <i class='app-menu__icon bx bx-pie-chart-alt-2 @ViewBag.hieuung6'></i><span class="app-menu__label">Kiểm kê / báo cáo</span>
                 </a>
             </li>
         </ul>
