--- a/Test02/Views/PhongKho/TaoPhieuXuatKho.cshtml
+++ b/Test02/Views/PhongKho/TaoPhieuXuatKho.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.xk = "active";
     ViewBag.Name = "Tạo phiếu Xuất kho";
+    ViewBag.hieuung3 = "bx-tada";
 }
 
 <div class="tile">
