--- a/Test02/Views/PhongKho/Test02.cshtml
+++ b/Test02/Views/PhongKho/Test02.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Tổng quan";
     ViewBag.tq = "active";
-
+    ViewBag.hieuung1 = "bx-tada";
 }
 
 <div class="row">
