--- a/Test02/Views/PhongKho/XoaKho.cshtml
+++ b/Test02/Views/PhongKho/XoaKho.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Xóa kho";
     ViewBag.qlk = "active";
+    ViewBag.hieuung2 = "bx-tada";
 }
 <div class="tile">
     <h3>Bạn muốn xóa kho "@Model.TenKho"?</h3>
