--- a/Test02/Views/PhongKho/ChiTietKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietKho.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Chi tiết kho";
     ViewBag.qlk = "active";
+    ViewBag.hieuung2 = "bx-tada";
 }
 @{
     var checkMessage = TempData["AlertMessage"];
