--- a/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
@@ -25,6 +25,24 @@
         </script>
     }
 }
+<div class="tile element-button">
+    @{
+        if (Model.TinhTrang == "Đã xét duyệt")
+        {
+            <form method="post" action="@Url.Action("UpdateStatusPhieu", "PhongKho", new { id = Model.MaPhieu })">
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-danger bx-tada">Đã nhập vào kho<i class='bx bx-question-mark'></i></button>
+            </form> }
+        else
+        {
+            <a class="btn btn-delete btn-sm print-file" id="btnPrint" href="/PhongKho/NhapKho" title="In" onclick="printDiv('printMe')">
+                <i class="fas fa-print"></i> In phiếu
+            </a>
+            <h5 class="pull-right">Tình trạng: <span class="badge bg-warning">@Model.TinhTrang</span></h5>
+        }
+    }
+</div>
+
 <div class="row">
     <div class="col-md-12">
         <div class="tile" id="printMe">
@@ -44,26 +62,26 @@
                         @Session["kinhgui"]
                     </div>
                     <!--<div class="form-group col-md-12" id="sample4">
-                <label class="control-label">- Nhập vào các kho: </label> <br />-->
+                    <label class="control-label">- Nhập vào các kho: </label> <br />-->
                     @*@for (int i = 0; i < dsCTKho.Count; i++)
-                {
-                    if (dsCTKho[i].TinhTrang == "Sắp hết hàng" || dsCTKho[i].TinhTrang == "Hết hàng")
-                    {
-                        distint.Add(dsCTKho[i].MaKho);
-                        distint = distint.Distinct().ToList();
-                    }
-                }
-                @for (int i = 0; i < dsCTKho.Count; i++)
-                {
-                    for (int j = 0; j >= 0 && j < distint.Count; j++)
-                    {
-                        if (distint[j].Equals(dsCTKho[i].MaKho))
                         {
-                            <span>@dsCTKho[i].MaKho - @dsCTKho[i].Kho.TenKho (@dsCTKho[i].Kho.DiaChi)</span> <br />
-                            distint.RemoveAt(j);
+                            if (dsCTKho[i].TinhTrang == "Sắp hết hàng" || dsCTKho[i].TinhTrang == "Hết hàng")
+                            {
+                                distint.Add(dsCTKho[i].MaKho);
+                                distint = distint.Distinct().ToList();
+                            }
                         }
-                    }
-                }*@
+                        @for (int i = 0; i < dsCTKho.Count; i++)
+                        {
+                            for (int j = 0; j >= 0 && j < distint.Count; j++)
+                            {
+                                if (distint[j].Equals(dsCTKho[i].MaKho))
+                                {
+                                    <span>@dsCTKho[i].MaKho - @dsCTKho[i].Kho.TenKho (@dsCTKho[i].Kho.DiaChi)</span> <br />
+                                    distint.RemoveAt(j);
+                                }
+                            }
+                        }*@
                     <!--</div>-->
                     <div class="form-group col-md-12" id="sample5">
                         <label class="control-label">- Họ tên người làm phiếu:</label>
@@ -157,21 +175,6 @@
         <i class="fas fa-retweet"></i>
         Trở lại
     </a>
-    @{
-        if (Model.TinhTrang == "Đã xét duyệt")
-        {
-            <form method="post" action="@Url.Action("UpdateStatusPhieu", "PhongKho", new { id = Model.MaPhieu })">
-                @Html.AntiForgeryToken()
-                <button type="submit" class="btn btn-danger">Done</button>
-            </form> }
-        else
-        {
-            <a class="btn btn-delete btn-sm print-file" id="btnPrint" href="/PhongKho/NhapKho" title="In" onclick="printDiv('printMe')">
-                <i class="fas fa-print"></i> In phiếu
-            </a>
-        }
-    }
-
 </p>
 
 <script>
