--- a/Test02/Views/PhongKho/DSDonHang.cshtml
+++ b/Test02/Views/PhongKho/DSDonHang.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.dhxdd = "active";
     ViewBag.Name = "Đơn hàng đã xét duyệt";
+    ViewBag.hieuung4 = "bx-tada";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     var listDH = db.DonHangs.ToList();
 }
