--- a/Test02/Views/PhongKho/EditCTKho.cshtml
+++ b/Test02/Views/PhongKho/EditCTKho.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Chỉnh sửa chi tiết kho";
     ViewBag.qlk = "active";
+    ViewBag.hieuung2 = "bx-tada";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 @{
