--- a/Test02/Views/PhongKho/PhanPhoiSanPham.cshtml
+++ b/Test02/Views/PhongKho/PhanPhoiSanPham.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Phân phối sản phẩm";
     ViewBag.qlk = "active";
+    ViewBag.hieuung2 = "bx-tada";
 }
 
 <div class="tile">
